--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mange bower dependencies with html tags",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/test.js"
+    "test": "mocha test/test.js",
+    "tw": "npm run test -- -w"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,9 @@
   },
   "homepage": "https://github.com/noygal/managed-bower#readme",
   "dependencies": {
+    "bower": "^1.4.1",
     "gulp": "^3.8.11",
+    "htmlparser2": "^3.8.2",
     "through2": "^0.6.5"
   },
   "devDependencies": {
