--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "chai": "^2.3.0",
+    "del": "^1.2.0",
     "gulp": "^3.8.11",
     "gulp-mocha": "^2.0.1",
     "mocha": "^2.2.5",
